add telegram update message server

--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,4 @@ packages/jQuery.Validation.1.11.1/Content/Scripts/jquery.validate-vsdoc.js
 packages/jQuery.Validation.1.11.1/Content/Scripts/jquery.validate.js
 packages/jQuery.Validation.1.11.1/Content/Scripts/jquery.validate.min.js
 packages/jQuery.Validation.1.11.1/jQuery.Validation.1.11.1.nupkg
+Rtb.Service/bin/Debug/Rtb.Service.vshost.exe.manifest
