--- a/Rtb.Rabbit/Rtb.Rabbit.csproj
+++ b/Rtb.Rabbit/Rtb.Rabbit.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IRabbitServer.cs" />
+    <Compile Include="RabbitServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabbitClient.cs" />
     <Compile Include="RabbitMessage.cs" />
